--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -1,3 +1,11 @@
 html {
-  background-color: rgb(93, 93, 133);
+    height: 100%;
+    border: solid white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+    font-weight: bold;
+    color: white;
+    background-color: black;
 }
